# optr

./: .gitignore  ci.dockerfile  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml
src/optr/algorithms/: base.py
src/optr/algorithms/pi0/: __init__.py  flow.py  moe.py  pi0.py
src/optr/algorithms/pi0/vlm/: __init__.py  base.py  paligemma.py  simple.py  tokenizer.py
src/optr/core/ipc/: sharedframe.py
src/optr/cortex/: critic.py
src/optr/ledger/: recorder.py
src/optr/ledger/solana/: __init__.py  serialize.py
src/optr/operator/: action.py  test_action.py
src/optr/simulator/: clock.py  runner.py  test_clock.py  test_runner.py  test_simulation.py
src/optr/simulator/mujoco/: renderer.py  test_camera.py  test_renderer.py
src/optr/simulator/mujoco/runners/: headless.py  passive.py
src/optr/stream/: clip.py  test_mp4.py
src/optr/stream/gstreamer/: __init__.py  buffer.py  control.py  pipeline.py  shmsink.py  sink.py  test_sinks.py  udpsink.py  unixfdsink.py  utils.py
src/optr/stream/gstreamer/element/: __init__.py  base.py  encoding.py  muxing.py  processing.py
src/optr/stream/recorder/: bench_recorder.py  queued_writer.py  recorder.py  test_helpers.py  test_recorder.py  writer.py
src/optr/training/: dataset.py
