[project]
name = "optr"
version = "0.0.0a2"
description = "Unified toolkit for building, training, and testing digital and physical operators."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CodecFlow Team", email = "team@codecflow.ai" }]
keywords = [
    "operators",
    "automation",
    "robotics",
    "desktop",
    "simulation",
    "sdk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pillow",
    "mss",
    "pyautogui",
    "opencv-python",
    "mujoco",
    "torch",
]

[project.urls]
Repository = "https://github.com/codecflow/optr"
Issues = "https://github.com/codecflow/optr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["examples/", "tests/", "uv.lock", "ruff.toml"]

[tool.taskipy.tasks]
check = "ruff check src"
format = "ruff format src"
test = "pytest src -v"

[project.optional-dependencies]
solana = [
    "solana>=0.30.0",
    "anchorpy>=0.18.0",
    "base58>=2.1.0",
    "msgpack>=1.0.0",
]

[dependency-groups]
dev = ["pytest", "ruff", "taskipy"]
